--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gone004.github.io/react-gh-pages",
+  "homepage": "https://gone004.github.io/CallMeGrowth",
   "name": "CallMeGrowth",
   "private": true,
   "version": "0.0.0",
