--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gone004.github.io/CallMeGrowth",
+  "homepage": "https://gone004.github.io/CallMeGrowth/",
   "name": "CallMeGrowth",
   "private": true,
   "version": "0.0.0",
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fontsource/plus-jakarta-sans": "^5.2.8",
